# StMFC

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg-configuration.json
resources/: StMFC_logo.icns
src/: StMFC_GUI.cpp  StMFC_GUI.hpp  convert.cpp  convert.hpp  exceptions.hpp  main.cpp
